update to java 17 | add logs | remove few code smells | add missing tests (#7)